// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amendments reducer adds amendments from @@letter-of-credit-amendments/GET_AMENDMENT_SUCCESS 1`] = `
Immutable.Map {
  "byStaticId": Immutable.Map {
    "8f226846-70ca-4320-9783-f09d2f4a65fe": Immutable.Map {
      "lcStaticId": "5a4df9a3-a57e-40c7-9184-b788459015de",
      "contractAddress": "0x00001",
      "stateHistory": Immutable.List [],
      "staticId": "8f226846-70ca-4320-9783-f09d2f4a65fe",
      "documentHash": "sha3",
      "reference": "a reference",
      "transactionHash": "0x00000",
      "diffs": Immutable.List [
        Immutable.Map {
          "op": "replace",
          "path": "/maxTolerance",
          "value": 3,
          "oldValue": 1,
          "type": "ITrade",
        },
      ],
      "updatedAt": "2019-02-01T00:00:00.000Z",
      "status": "REQUESTED",
      "lcReference": "BP-2019-001",
      "version": 1,
      "createdAt": "2019-02-01T00:00:00.000Z",
    },
  },
}
`;

exports[`amendments reducer merges a new amendment with existing amendments successfully 1`] = `
Immutable.Map {
  "byStaticId": Immutable.Map {
    "8f226846-70ca-4320-9783-f09d2f4a65fe": Immutable.Map {
      "lcStaticId": "5a4df9a3-a57e-40c7-9184-b788459015de",
      "contractAddress": "0x00001",
      "stateHistory": Immutable.List [],
      "staticId": "8f226846-70ca-4320-9783-f09d2f4a65fe",
      "documentHash": "sha3",
      "reference": "a reference",
      "transactionHash": "0x00000",
      "diffs": Immutable.List [
        Immutable.Map {
          "op": "replace",
          "path": "/maxTolerance",
          "value": 3,
          "oldValue": 1,
          "type": "ITrade",
        },
      ],
      "updatedAt": "2019-02-01T00:00:00.000Z",
      "status": "REQUESTED",
      "lcReference": "BP-2019-001",
      "version": 1,
      "createdAt": "2019-02-01T00:00:00.000Z",
    },
    "other": Immutable.Map {
      "lcStaticId": "5a4df9a3-a57e-40c7-9184-b788459015de",
      "contractAddress": "0x00001",
      "stateHistory": Immutable.List [],
      "staticId": "other",
      "documentHash": "sha3",
      "reference": "a reference",
      "transactionHash": "0x00000",
      "diffs": Immutable.List [
        Immutable.Map {
          "op": "replace",
          "path": "/maxTolerance",
          "value": 3,
          "oldValue": 1,
          "type": "ITrade",
        },
      ],
      "updatedAt": "2019-02-01T00:00:00.000Z",
      "status": "REQUESTED",
      "lcReference": "BP-2019-001",
      "version": 1,
      "createdAt": "2019-02-01T00:00:00.000Z",
    },
  },
}
`;

exports[`amendments reducer starts empty 1`] = `
Immutable.Map {
  "byStaticId": Immutable.Map {},
}
`;
